# 12770-2026S-project

./: .gitignore  DEMO_SCRIPT.md  README.md  all_conditions.py  check_db.py  demo.py  hw3_task7.txt  init_db.py  intent_parser.py  intent_parser_v1.txt  main.py  phase1_eval.py  phase1_test_cases.json  plot_trajectories.py  pyproject.toml  requirements.txt  schema.py  smoke_test.py  test_agent.py  test_data.py  需求.md
PID/: Boptest.py  PID.py  boptest_RC_1.csv  boptest_data_1.csv
agent/: mock_pid.py  mock_runner.py  mock_telemetry.py  parser.py  proactive_supervisor.py  proactive_supervisor_prompt.txt  prompt.txt  schema.py  supervisor.py  supervisor_prompt.txt  tools.py
config/: energy.yaml  experiment.yaml  limits.yaml  pid.yaml  rooms.yaml
data/: data_collector.py  smart_home.db  user_habits.json  user_schedule.json
demo/: README.md  build_experiment_dashboard.py  c0_baseline.py  c1_llm_setpoint_only.py  c2_reactive_pid_supervision.py  c3_proactive_pid_supervision.py  clean_data.py  compare_all_metrics_barplots.py  fit_1r1c.py  generate_two_days_temperature.py  metrics.py  readme_Chinese.md  scenarios.py
demo/config/: rc_fit_results.json
demo/data/: synthetic_outdoor_temperature_two_days.csv  test_box.xlsx  test_box_insulated_cleaned.xlsx
docs/: agent.md  c2_c3_experiment_design.md  config_reference.md  controller.md  ha_integration.md
outputs/full_experiment_c2/: aggregate_metrics.csv  (+2 more)
simulation/: __init__.py  runner.py  scenarios.py
tests/: phase1_eval.py  phase1_results.json  phase1_test_cases.json  phase2_round2_smoke.py  phase2_tools_smoke.py
(+280 files in other folders)
